client/style.less
@import "../node_modules/bootstrap/less/bootstrap";
@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
@import url(https://fonts.googleapis.com/earlyaccess/mplus1p.css);

// Fonts

@font-family-monospace: 'Anonymous Pro', monospace;

.jp {
    font-family: 'Mplus 1p', sans-serif;
}

// Utility classes

.center {
    text-align: center;
}

.min-width {
    white-space: nowrap;
}

.max-width {
    width: 100%;
}

